<resources>
    <string name="app_name">Amar Nós e Pontos</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="nacionalidade">Nacionalidade</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="profissao">Profissão</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="estado">Estado</string>
    <string name="municipio">Município</string>
    <string name="complemento">Complemento</string>
    <string name="numero">Número</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="produto">Produto</string>
    <string name="observacao">Observação</string>
    <string name="valor_pago">Valor Pago</string>
    <string name="nova_pessoa">Nova Pessoa</string>
    <string name="logo_amar">Logo Amar</string>
    <string name="botao_mais_opcoes">Botão mais opções</string>
    <string name="excluir">Excluir</string>
    <string name="enderecos">Enderecos</string>
    <string name="novo_endereco">Novo Endereço</string>
    <string name="gerar_contrato">Gerar Contrato</string>
    <string name="descricao_produto">Descrição Produto</string>
    <string name="novo_contrato">Novo Contrato</string>
    <string name="editar">Editar</string>
</resources>
