<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:background="@color/color_main"
                android:layout_height="?attr/actionBarSize">

            <ImageView android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:contentDescription="logo amar"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>



    <EditText android:id="@+id/activity_formulario_contrato_produto"
              android:hint="@string/produto"
              android:layout_width="match_parent"
              android:inputType="textCapSentences"
              android:layout_margin="8dp"
              android:layout_height="wrap_content"/>

    <EditText android:id="@+id/activity_formulario_contrato_descricao_produto"
              android:hint="@string/descricao_produto"
              android:layout_width="match_parent"
              android:inputType="textCapSentences"
              android:layout_margin="8dp"
              android:layout_height="wrap_content"/>

    <EditText android:id="@+id/activity_formulario_contrato_valor_pago"
              android:hint="@string/valor_pago"
              android:layout_width="match_parent"
              android:inputType="numberDecimal"
              android:layout_margin="8dp"
              android:layout_height="wrap_content"/>

    <EditText android:id="@+id/activity_formulario_contrato_valor"
              android:hint="@string/valor"
              android:layout_width="match_parent"
              android:inputType="numberDecimal"
              android:layout_margin="8dp"
              android:layout_height="wrap_content"/>

    <Spinner android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/activity_formulario_contrato_status"/>

    <EditText android:id="@+id/activity_formulario_contrato_observacao"
              android:hint="@string/observacao"
              android:layout_width="match_parent"
              android:inputType="textCapSentences"
              android:layout_margin="8dp"
              android:layout_height="wrap_content"/>

</LinearLayout>
