<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:background="@color/color_main"
                    android:layout_height="?attr/actionBarSize">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <EditText android:id="@+id/activity_formulario_pessoa_nome_completo"
                  android:hint="@string/nome_completo"
                  android:layout_width="match_parent"
                  android:inputType="textCapWords"
                  android:layout_margin="8dp"
                  android:layout_height="wrap_content"/>

        <EditText android:id="@+id/activity_formulario_pessoa_nacionalidade"
                  android:hint="@string/nacionalidade"
                  android:layout_width="match_parent"
                  android:inputType="textCapWords"
                  android:layout_margin="8dp"
                  android:layout_height="wrap_content"/>

        <Spinner android:id="@+id/activity_formulario_pessoa_estado_civil_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>

        <EditText android:id="@+id/activity_formulario_pessoa_profissao"
                  android:hint="@string/profissao"
                  android:layout_width="match_parent"
                  android:inputType="textCapWords"
                  android:layout_margin="8dp"
                  android:layout_height="wrap_content"/>

        <EditText android:id="@+id/activity_formulario_pessoa_cpf_cnpj"
                  android:hint="@string/cpf_cnpj"
                  android:layout_width="match_parent"
                  android:inputType="numberDecimal"
                  android:layout_margin="8dp"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
